--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Servicios Jurídicos SRL</title>
 </head>
 
 <body>
   <div class="inicio">
-    <img src="logo.jpg" alt="logo">
     <header class="encabezado">
       <!--===============MENU -->
       <nav class="menu navegacion">
@@ -64,59 +64,48 @@
         CONTENIDO
         ======================-->
     <main class="contenido">
-      <!--===============SECCION SERVICIOS -->
-      <section class="seccion servicios" id="servicios">
-        <!--* GRUPO SERVICIOS INTRODUCCIÓN -->
-        <article class="grupo introduccion">
-          <h2 class="titulo">
-            Servicios que ofrecemos
-            <i class="decoracion"></i>
-          </h2>
-          <p>
-            Estamos comprometidos con usted para llevar su empresa a otro
-            nivel, a través de:
-          </p>
-        </article>
-        <!--FIN GRUPO INTRODUCCION-->
+      <!-- SECCION SERVICIOS -->
+<section class="seccion servicios">
+  <!-- GRUPO SERVICIOS INTRODUCCIÓN -->
+  <article class="grupo introduccion">
+      <h3 class="titulo centrado">Servicios que ofrecemos <i class="decoracion"></i></h3>
+  </article>
+  <!-- FIN GRUPO INTRODUCCION -->
 
-        <!--* GRUPO SERVICIOS CONTENIDO -->
-        <article class="grupo contenido">
-          <div class="grupo servicio banca">
-            <h4 class="titulo">ATENCIÓN AL CLIENTE</h4>
-            <p>
+  <!-- GRUPO SERVICIOS CONTENIDO -->
+  <article class="grupo contenido">
+      <div class="grupo servicio banca">
+          <h4 class="titulo">ATENCIÓN AL CLIENTE</h4>
+          <p>
               Proveemos servicios tercerizados de customer service y
               administración de cartera bajo procesos certificados y los más
               altos estándares de calidad y calidez para el cuidado de la
               reputación e imagen de tu marca.
-            </p>
-          </div>
-          <div class="grupo servicio consultoria">
-            <figure class="icon-container">
-            </figure>
-            <h4 class="titulo">ADMINISTRACIÓN DE CARTERA MOROSA</h4>
-            <p>
+          </p>
+      </div>
+      <div class="grupo servicio consultoria">
+          <h4 class="titulo">ADMINISTRACIÓN DE CARTERA MOROSA</h4>
+          <p>
               Tenemos el conocimiento, las herramientas y la experiencia que
               nos permiten gestionar en forma eficiente el ciclo completo de
               las carteras en mora, logrando resultados superiores de recupero
               y una muy baja incidencia de incobrables.
-            </p>
-          </div>
-          <div class="grupo servicio estrategia">
-            <figure class="icon-container">
-            </figure>
-            <h4 class="titulo">SERVICIOS DE GESTIÓN DE COBRANZAS</h4>
-            <p>
+          </p>
+      </div>
+      <div class="grupo servicio estrategia">
+          <h4 class="titulo">SERVICIOS DE GESTIÓN DE COBRANZAS</h4>
+          <p>
               Un equipo de profesionales con experiencia y formación en la
               gestión de cobros, junto con la mejor tecnología aplicada a los
               procesos, nos permiten ser una de las empresas de cobranzas con
               mejor perfomance en la gestión de cobranzas y administracion de
               cartera en mora.
-            </p>
-          </div>
-        </article>
-        <!--FIN GRUPO CONTENIDO-->
-      </section>
-      <!--FIN SECCION SERVICIOS-->
+          </p>
+      </div>
+  </article>
+  <!-- FIN GRUPO CONTENIDO -->
+</section>
+<!-- FIN SECCION SERVICIOS -->
 
       <!--===============SECCION ESPECIALIDAD -->
       <section class="seccion beneficios">
@@ -338,22 +327,14 @@
         <!--FIN GRUPO PAGOS-->
       </section>
 
-      <!--===============SECCION LOCALIZACION -->
-      <section class="seccion localizacion">
-        <!--* GRUPO LOCALIZACION INTRODUCCIÓN -->
-        <article class="grupo introduccion">
-          <h3 class="titulo centrado">
-            Servicios Jurídicos SRL
-            <i class="decoracion"></i>
-          </h3>
-        </article>
-        <!--FIN GRUPO LOCALIZACION INTRODUCCION-->
-
     </main>
 
     <footer class="pie-de-pagina">
       <section class="grupo">
         <div class="subgrupo">
+          <h3 class="titulo centrado">
+            Servicios Jurídicos SRL
+            <i class="decoracion"></i>
           <ul class="menu">
             <li>
               <i class="fa fa-map-marker" aria-hidden="true"></i>
