--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
               </a>
             </li>
             <li>
-              <a href="" target="_self"> SERVICIOS </a>
-            </li>
-            <li>
-              <a href="" target="_self"> CONTÁCTENOS </a>
+              <a href="#servicios" target="_self"> SERVICIOS </a>
             </li>
           </ul>
         </section>
@@ -68,7 +65,7 @@
 <section class="seccion servicios">
   <!-- GRUPO SERVICIOS INTRODUCCIÓN -->
   <article class="grupo introduccion">
-      <h3 class="titulo centrado">Servicios que ofrecemos <i class="decoracion"></i></h3>
+      <h3 class="titulo centrado" id="servicios">Servicios que ofrecemos <i class="decoracion"></i></h3>
   </article>
   <!-- FIN GRUPO INTRODUCCION -->
 
